--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 settings:
-  title: 'Status Page'
+  title: 'jymuoyu-Status Page'
   url: 'https://status-page.eidam.dev' # used for Slack messages
   logo: logo-192x192.png # image in ./public/ folder
   daysInHistogram: 90 # number of days you want to display in histogram
@@ -15,25 +15,26 @@ settings:
   dayInHistogramNotOperational: ' incident(s)' # xx incident(s) recorded
 
 monitors:
-  - id: workers-cloudflare-com # unique identifier
-    name: workers.cloudflare.com
-    description: 'You write code. They handle the rest.' # default=empty
-    url: 'https://workers.cloudflare.com/' # URL to fetch
+  - id: f-jymuoyu # unique identifier
+    name: 茶水间
+    description: 'Misskey-茶水间~来摸鱼吧' # default=empty
+    url: 'https://f.jymuoyu.com/' # URL to fetch
     method: GET # default=GET
     expectStatus: 200 # operational status, default=200
     followRedirect: false # should fetch follow redirects, default=false
-    linkable: false # allows the title to be a link, default=true
+    linkable: true # allows the title to be a link, default=true
 
-  - id: www-cloudflare-com
-    name: www.cloudflare.com
-    description: 'Built for anything connected to the Internet.'
-    url: 'https://www.cloudflare.com'
+  - id: e-jymuoyu
+    name: 小饭馆
+    description: 'Pleroma-打工人小饭馆'
+    url: 'https://e.jymuoyu.com/'
     method: GET
     expectStatus: 200
     linkable: true # allows the title to be a link, default=true
 
-  - id: blog-cloudflare-com
-    name: The Cloudflare Blog
-    url: 'https://blog.cloudflare.com/'
+  - id: m-jymuoyu
+    name: Matrix-jymuoyu
+    url: 'https://jymuoyu.com/'
     method: GET
     expectStatus: 200
+    linkable: false
