--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 settings:
   title: 'jymuoyu-Status Page'
   url: 'https://status-page.eidam.dev' # used for Slack messages
-  logo: logo-192x192.png # image in ./public/ folder
+  logo: 20210111_172252.jpg # image in ./public/ folder
   daysInHistogram: 90 # number of days you want to display in histogram
   collectResponseTimes: true # collects avg response times from CRON locations
 
